--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,9 @@
+<!-- (keyup.enter)="emitValue(txtInput.value)" -->
 <input
   type="text"
   class="form-control"
   [placeholder]="placeholder"
-  (keyup.enter)="emitValue(txtInput.value)"
+  [value]="initialValue"
+  (keyup)="onKeyPress(txtInput.value)"
   #txtInput
 >
